Rebrand to OpenETC

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - master
       - stable
+      - master-v3.0.1
 jobs:
   build-tests:
     name:                       Test and Build
@@ -26,7 +27,7 @@ jobs:
         uses:                   actions/checkout@master
         with:
           submodules:           true
-      # https://github.com/actions/cache/issues/133 
+      # https://github.com/actions/cache/issues/133
       - name:                   Fixup the owner of ~/.cargo/
         if:                     matrix.platform == 'ubuntu-16.04'
         run:                    sudo chown -R $(whoami):$(id -ng) ~/.cargo/
