--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,13 +6,14 @@ on:
     branches:
       - master
       - stable
+      - master-v3.0.1
 jobs:
   check:
     name:                       Check
     runs-on:                    ubuntu-16.04
     env:
       SCCACHE_CACHE_SIZE:       "1G"
-      SCCACHE_IDLE_TIMEOUT:     0    
+      SCCACHE_IDLE_TIMEOUT:     0
     steps:
       - name:                   Checkout sources
         uses:                   actions/checkout@master
