--- a/accounts/Cargo.toml
+++ b/accounts/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-description = "OpenEthereum Account Management"
+description = "OpenETC Account Management"
 license = "GPL-3.0"
 name = "ethcore-accounts"
 version = "0.1.0"
