--- a/accounts/ethstore/cli/Cargo.toml
+++ b/accounts/ethstore/cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-description = "OpenEthereum Key Management CLI"
+description = "OpenETC Key Management CLI"
 name = "ethstore-cli"
 version = "0.1.1"
 authors = ["Parity Technologies <admin@parity.io>"]
