--- a/ethcore/types/Cargo.toml
+++ b/ethcore/types/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-description = "OpenEthereum Common Types"
+description = "OpenETC Common Types"
 name = "common-types"
 version = "0.1.0"
 authors = ["Parity Technologies <admin@parity.io>"]
