--- a/miner/Cargo.toml
+++ b/miner/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-description = "OpenEthereum Miner Interface."
+description = "OpenETC Miner Interface."
 name = "ethcore-miner"
-repository = "https://github.com/openethereum/openethereum"
+repository = "https://github.com/openetc/openetc"
 license = "GPL-3.0"
 version = "1.12.0"
 authors = ["Parity Technologies <admin@parity.io>"]
