--- a/miner/price-info/Cargo.toml
+++ b/miner/price-info/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 description = "Fetch current ETH price"
-repository = "https://github.com/openethereum/openethereum"
+repository = "https://github.com/openetc/openetc"
 license = "GPL-3.0"
 name = "price-info"
 version = "1.12.0"
