--- a/parity/logger/Cargo.toml
+++ b/parity/logger/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-description = "OpenEthereum Logger Implementation"
+description = "OpenETC Logger Implementation"
 name = "ethcore-logger"
 version = "1.12.0"
 license = "GPL-3.0"
