--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-description = "OpenEthereum JSON-RPC Servers (WS, HTTP, IPC)"
+description = "OpenETC JSON-RPC Servers (WS, HTTP, IPC)"
 name = "parity-rpc"
 version = "1.12.0"
 license = "GPL-3.0"
