--- a/scripts/openetc.service
+++ b/scripts/openetc.service
@@ -1,22 +1,20 @@
 [Unit]
-Description=OpenEthereum
+Description=OpenETC
 After=network.target
 
 [Service]
 # run as root, set base_path in config.toml
-ExecStart=/usr/bin/openethereum --config /etc/parity/config.toml
+ExecStart=/usr/bin/openetc --config /etc/parity/config.toml
 # To run as user, comment out above and uncomment below, fill in user and group
 # picks up users default config.toml in $HOME/.local/share/io.parity.ethereum/
 # User=username
 # Group=groupname
-# ExecStart=/usr/bin/openethereum
+# ExecStart=/usr/bin/openetc
 Restart=on-failure
 
 # Specifies which signal to use when killing a service. Defaults to SIGTERM.
-# SIGHUP gives openethereum time to exit cleanly before SIGKILL (default 90s)
+# SIGHUP gives openetc time to exit cleanly before SIGKILL (default 90s)
 KillSignal=SIGHUP
 
 [Install]
 WantedBy=default.target
-
-
