--- a/updater/Cargo.toml
+++ b/updater/Cargo.toml
@@ -32,7 +32,7 @@ tempfile = "3.1"
 matches = "0.1"
 
 [features]
-# hardcode version number 1.3.7 of OpenEthereum to force an update
-# in order to manually test that OpenEthereum fail-over to the local version
+# hardcode version number 1.3.7 of OpenETC to force an update
+# in order to manually test that OpenETC fail-over to the local version
 # in case of invalid or deprecated command line arguments are entered
 test-updater = []
