--- a/util/EIP-712/Cargo.toml
+++ b/util/EIP-712/Cargo.toml
@@ -2,7 +2,7 @@
 name = "eip-712"
 version = "0.1.1"
 authors = ["Parity Technologies <admin@parity.io>"]
-repository = "https://github.com/openethereum/openethereum"
+repository = "https://github.com/openetc/openetc"
 documentation = "https://docs.rs/eip-712"
 readme = "README.md"
 description = "eip-712 encoding"
