--- a/util/fetch/Cargo.toml
+++ b/util/fetch/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 description = "HTTP/HTTPS fetching library"
-repository = "https://github.com/openethereum/openethereum"
+repository = "https://github.com/openetc/openetc"
 license = "GPL-3.0"
 name = "fetch"
 version = "0.1.0"
