--- a/util/io/Cargo.toml
+++ b/util/io/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ethcore-io"
 description = "Ethcore IO library"
 version = "1.12.0"
-repository = "https://github.com/openethereum/openethereum"
+repository = "https://github.com/openetc/openetc"
 license = "GPL-3.0"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
@@ -19,4 +19,3 @@ timer = "0.2"
 time = "0.1"
 tokio = "0.1"
 futures = "0.1"
-
