--- a/util/network-devp2p/Cargo.toml
+++ b/util/network-devp2p/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 description = "DevP2P implementation of the ethcore network library"
-repository = "https://github.com/openethereum/openethereum"
+repository = "https://github.com/openetc/openetc"
 license = "GPL-3.0"
 name = "ethcore-network-devp2p"
 version = "1.12.0"
