--- a/util/network/Cargo.toml
+++ b/util/network/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 description = "Ethcore network library"
-repository = "https://github.com/openethereum/openethereum"
+repository = "https://github.com/openetc/openetc"
 license = "GPL-3.0"
 name = "ethcore-network"
 version = "1.12.0"
