--- a/util/panic-hook/Cargo.toml
+++ b/util/panic-hook/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 description = "Parity custom panic hook"
-repository = "https://github.com/openethereum/openethereum"
+repository = "https://github.com/openetc/openetc"
 license = "GPL-3.0"
 name = "panic_hook"
 version = "0.1.0"
